# RustyOmeStats

./: .gitignore  Cargo.toml  README.md
.github/workflows/: experimental.yml  rust.yml
scripts/: plot_stats.py
src/: README.md  codon.rs  fgs.rs  io_utils.rs  lib.rs  main.rs  stats.rs  u50.rs  visualization.rs
test/: JAPAEP01-1.fna
tests/: cli.rs
