[package]
name         = "rustyomestats"
version      = "0.2.0"
edition      = "2021"
rust-version = "1.88"
authors      = ["Richard Allen White III <rwhit101@charlotte.edu>"]
license      = "CC-BY-NC-4.0"
description  = "Fast genome statistics: length, GC, N/L, 6-frame and FragGeneScan codon density, plus Castro U50 assembly metrics."
homepage     = "https://github.com/raw-lab/rustyomestats"
repository   = "https://github.com/raw-lab/rustyomestats"
documentation = "https://docs.rs/rustyomestats"
readme       = "README.md"
license-file = "LICENSE"
keywords     = ["bioinformatics", "genomics", "assembly", "codon", "u50"]
categories   = ["science::bioinformatics::genomics", "command-line-utilities"]
include      = [
    "src/**/*.rs",
    "scripts/plot_stats.py",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[lib]
name = "rustyomestats"
path = "src/lib.rs"

[[bin]]
name = "rustyomestats"
path = "src/main.rs"

[dependencies]
clap   = { version = "4.5",  features = ["derive"] }
bio    = "2.0"
polars = { version = "0.46", features = ["lazy", "csv"] }
rayon  = "1.10"
anyhow = "1.0"
base64 = "0.22"
plotters = { version = "0.3", features = ["full_palette", "bitmap_backend"] }
serde = { version = "1", features = ["derive"] }
csv = "1"
chrono = "0.4"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
